--- a/rx-txpn/package.json
+++ b/rx-txpn/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^5.2.2",
     "flow-bin": "^0.51.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "txpn-core": "file:../txpn-core"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,6 +22,8 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "source-map-loader": "^0.2.1",
     "typescript": "^2.4.2"
   }
