--- a/txpn/txpn-core/package.json
+++ b/txpn/txpn-core/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "./dist/txpn-core.js",
-  "dependencies": {
-    "ajv": "^5.2.2",
-    "flow-bin": "^0.51.1"
-  },
+  "dependencies": {},
   "description": "Core data model and game engine for txpn, the Textploration browser client.",
   "scripts": {
     "build": "webpack",
@@ -17,11 +14,13 @@
   "author": "Sebastian Sangervasi",
   "license": "ISC",
   "devDependencies": {
+    "ajv": "^5.2.2",
     "babel-cli": "^6.24.1",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "flow": "^0.2.3",
+    "flow-bin": "^0.51.1",
     "flow-remove-types": "^1.2.1",
     "jest": "^20.0.4",
     "webpack": "^3.4.1"
