--- a/rx-txpn/.flowconfig
+++ b/rx-txpn/.flowconfig
@@ -1,9 +1,20 @@
 [ignore]
+./node_modules/
 
 [include]
 
 [libs]
 
 [options]
+emoji=true
+; module.system.node.resolve_dirname=node_modules
+; module.system.node.resolve_dirname=rx-txpn
+; module.system.node.resolve_dirname=src
+
+; Add more types using the capturing group.
+; suppress_comment= \\(.\\|\n\\)*\\$FlowFix:\\(Destructuring|foo\\)
+suppress_comment=// \\$FlowFix:Destructuring
+; suppress_comment=FlowFix:Destructuring
+; suppress_comment= \\(.\\|\n\\)*\\$FlowFix:Destructuring
 
 [lints]
