--- a/rx-txpn/package.json
+++ b/rx-txpn/package.json
@@ -2,9 +2,8 @@
   "name": "txpn",
   "version": "0.1.0",
   "private": true,
+  "main": "./src/index.js",
   "dependencies": {
-    "ajv": "^5.2.2",
-    "flow-bin": "^0.51.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.10",
@@ -18,10 +17,13 @@
     "flow": "flow"
   },
   "devDependencies": {
+    "ajv": "^5.2.2",
     "awesome-typescript-loader": "^3.2.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "flow": "^0.2.3",
+    "flow-bin": "^0.51.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "source-map-loader": "^0.2.1",
