--- a/txpn/txpn-core/.flowconfig
+++ b/txpn/txpn-core/.flowconfig
@@ -1,10 +1,14 @@
 [ignore]
-./node_modules/
 
 [include]
 
 [libs]
 
 [options]
+all=false
 emoji=true
+
+module.system.node.resolve_dirname=node_modules
+module.system.node.resolve_dirname=src
+
 [lints]
