--- a/txpn/txpn-rx/package.json
+++ b/txpn/txpn-rx/package.json
@@ -2,7 +2,7 @@
   "name": "txpn-rx",
   "version": "0.1.0",
   "private": true,
-  "main": "./src/txpn-rx/index.js",
+  "main": "./src/index.js",
   "dependencies": {
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.0.2",
@@ -20,7 +20,8 @@
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && react-scripts build",
+    "build": "npm run build-css && react-scripts build -v",
+    "build-js": "react-scripts build -v",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
