--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "private": true,
   "main": "./src/index.js",
   "dependencies": {
-    "node-sass-chokidar": "0.0.3",
-    "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.10",
     "unsemantic": "^1.1.3"
   },
   "scripts": {
@@ -32,7 +29,9 @@
     "babel-preset-es2015": "^6.24.1",
     "flow": "^0.2.3",
     "flow-bin": "^0.51.1",
-    "source-map-loader": "^0.2.1",
-    "typescript": "^2.4.2"
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.0.2",
+    "react-scripts": "^1.0.10",
+    "source-map-loader": "^0.2.1"
   }
 }
