--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.24.1",
     "flow": "^0.2.3",
     "flow-bin": "^0.51.1",
+    "flow-typed": "^2.1.5",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.0.2",
     "react-scripts": "^1.0.10",
