--- a/txpn/.flowconfig
+++ b/txpn/.flowconfig
@@ -11,4 +11,6 @@ emoji=true
 module.system.node.resolve_dirname=src
 module.system.node.resolve_dirname=node_modules
 
+unsafe.enable_getters_and_setters=true
+
 [lints]
