--- a/package.json
+++ b/package.json
@@ -8,26 +8,20 @@
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "unsemantic": "^1.1.3"
+    "react-scripts": "1.0.13",
+    "unsemantic": "^1.1.3",
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.0.2",
+    "source-map-loader": "^0.2.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run build-css && react-scripts build -v",
-    "build-js": "react-scripts build -v",
+    "build": "npm run build-css && react-scripts build",
+    "build-js": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "ajv": "^5.2.2",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "node-sass-chokidar": "0.0.3",
-    "npm-run-all": "^4.0.2",
-    "react-scripts": "^1.0.10",
-    "source-map-loader": "^0.2.1"
   }
 }
