--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "main": "./src/index.js",
   "dependencies": {
+    "enzyme": "^2.9.1",
+    "jest-enzyme": "^3.8.3",
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.13",
-    "unsemantic": "^1.1.3",
-    "node-sass-chokidar": "0.0.3",
-    "npm-run-all": "^4.0.2",
-    "source-map-loader": "^0.2.1"
+    "react-test-renderer": "^15.6.1",
+    "source-map-loader": "^0.2.1",
+    "unsemantic": "^1.1.3"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
